[gd_scene load_steps=3 format=3 uid="uid://bkh6i1qdflrh7"]

[ext_resource type="Texture2D" uid="uid://bc1domrl5u1nj" path="res://assets/puzzles/AdobeStock_104619688.jpeg" id="1_p7le5"]
[ext_resource type="Script" path="res://assets/scripts/select_dimensions.gd" id="1_ugu4d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugu4d")

[node name="background texture" type="Sprite2D" parent="."]
position = Vector2(1007, 675)
scale = Vector2(0.388011, 0.380041)
texture = ExtResource("1_p7le5")

[node name="VBoxContainer" type="VBoxContainer" parent="background texture"]
offset_left = -1368.52
offset_top = -636.773
offset_right = 1175.48
offset_bottom = 136.227
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="title" type="Label" parent="background texture/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Enter the dimensions of the puzzle you want to solve"

[node name="Labelw" type="Label" parent="background texture/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Width:"
horizontal_alignment = 1

[node name="HSliderWidth" type="HSlider" parent="background texture/VBoxContainer"]
layout_mode = 2
min_value = 2.0
value = 2.0

[node name="Labelh" type="Label" parent="background texture/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Height:"
horizontal_alignment = 1

[node name="HSliderHeight" type="HSlider" parent="background texture/VBoxContainer"]
layout_mode = 2
min_value = 2.0
value = 2.0

[node name="Button" type="Button" parent="background texture/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start Game"

[connection signal="value_changed" from="background texture/VBoxContainer/HSliderWidth" to="." method="_on_h_slider_width_value_changed"]
[connection signal="value_changed" from="background texture/VBoxContainer/HSliderHeight" to="." method="_on_h_slider_height_value_changed"]
[connection signal="pressed" from="background texture/VBoxContainer/Button" to="." method="_on_button_pressed"]
